--- a/src/style.css
+++ b/src/style.css
@@ -1,111 +1,197 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    background-image: url(../img/bg-mob.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/bg-mob.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 nav {
-    padding: 25px 80px;
-    display: flex;
-    background-color: white;
-    justify-content: space-between;
-    align-items: center;
+  padding: 25px 80px;
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav .logo a {
-    text-decoration: none;
-    color: black;
-    font-size: 25px;
-    font-weight: bold;
-    font-style: italic;
+  text-decoration: none;
+  color: black;
+  font-size: 25px;
+  font-weight: bold;
+  font-style: italic;
 }
 
 nav ul {
-    display: flex;
-    list-style: none;
-    gap: 30px;
+  display: flex;
+  list-style: none;
+  gap: 30px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    font-weight: 500;
+  text-decoration: none;
+  font-weight: 500;
 }
 
 section .container {
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    
+  width: 100%;
+  height: 90vh;
+  display: flex;
 }
 
 .container .left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 .left img {
-    width: 600px;
+  width: 600px;
 }
 
 .container .right {
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .right form {
-    border: 1px solid white;
-    border-radius: 5px;
-    width: 400px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  border: 1px solid white;
+  border-radius: 5px;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form h1 {
-    margin-top: 30px;
-    font-size: 40px;
-    color: white;
+  margin-top: 30px;
+  font-size: 40px;
+  color: white;
 }
 
 form .colm {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 form .colm input {
-    padding: 9px 10px;
-    border-radius: 3px;
-    outline: none;
-    border: transparent;
-    margin-bottom: 20px;
+  padding: 9px 10px;
+  border-radius: 3px;
+  outline: none;
+  border: transparent;
+  margin-bottom: 20px;
 }
 
 form .colm button {
-    border-radius: 5px;
-    outline: none;
-    border: transparent;
-    background-color: white;
-    padding: 9px 25px;
-    margin-top: 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  outline: none;
+  border: transparent;
+  background-color: white;
+  padding: 9px 25px;
+  margin-top: 10px;
+}
+
+.hamburger-menu {
+  display: none;
+}
+
+@media screen and (max-width: 576px) {
+  body {
+    overflow-y: auto;
+    height: 1000px;
+  }
+
+  nav {
+    padding: 15px 0;
+  }
+
+  nav .logo a {
+    margin-left: 15px;
+  }
+
+  nav .hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    width: 40px;
+    height: 35px;
+    cursor: pointer;
+    margin-right: 8px;
+    z-index: 1;
+  }
+
+  .hamburger-menu span {
+    z-index: -1;
+    display: block;
+    transition: 0.2s;
+    width: 27px;
+    height: 3px;
+    border-radius: 2px;
+    background-color: red;
+  }
+
+  .hamburger-active > span:nth-child(1) {
+    margin-left: 10px;
+    transform: rotate(45deg);
+    transform-origin: top left;
+    background-color: red;
+  }
+
+  .hamburger-active > span:nth-child(2) {
+    margin-left: 10px;
+    transform: scale(0);
+  }
+
+  .hamburger-active > span:nth-child(3) {
+    margin-left: 10px;
+    transform: rotate(-45deg);
+    transform-origin: bottom left;
+    background-color: red;
+  }
+
+  nav ul {
+    opacity: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    top: 65px;
+    right: 30px;
+    width: 130px;
+    padding: 10px 5px;
+    border: 1px solid #cbd5e1;
+    border-radius: 6px;
+    transform: translateY(-20px);
+    background-color: #0f172ae1;
+  }
+
+  section .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container .right {
+    width: 80%;
+  }
 }
