--- a/src/style.css
+++ b/src/style.css
@@ -171,18 +171,7 @@ form .colm button {
   }
 
   nav ul {
-    opacity: 0;
-    flex-direction: column;
-    align-items: flex-start;
-    position: absolute;
-    top: 65px;
-    right: 30px;
-    width: 130px;
-    padding: 10px 5px;
-    border: 1px solid #cbd5e1;
-    border-radius: 6px;
-    transform: translateY(-20px);
-    background-color: #0f172ae1;
+    display: none;
   }
 
   section .container {
