--- a/src/style.css
+++ b/src/style.css
@@ -10,10 +10,6 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100vh;
-  background-image: url(../img/bg-mob.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 nav {
@@ -43,10 +39,20 @@ nav ul li a {
   font-weight: 500;
 }
 
+section {
+  background-image: url(../img/bg-mob.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
 section .container {
   width: 100%;
   height: 90vh;
   display: flex;
+  overflow: hidden;
 }
 
 .container .left {
@@ -117,7 +123,6 @@ form .colm button {
 @media screen and (max-width: 576px) {
   body {
     overflow-y: auto;
-    height: 1000px;
   }
 
   nav {
