--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,7 @@ form .colm button {
 
 @media screen and (max-width: 576px) {
   body {
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 
   nav {
