--- a/src/style.css
+++ b/src/style.css
@@ -119,7 +119,7 @@ form .colm button {
 @media screen and (max-width: 576px) {
   body {
     overflow-y: scroll;
-    
+    height: 140vh;
   }
 
   nav {
