--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 100%;
-  height: 100vh;
 }
 
 nav {
@@ -119,7 +117,7 @@ form .colm button {
 @media screen and (max-width: 576px) {
   body {
     overflow-y: scroll;
-    height: 140vh;
+    height: 1000px;
   }
 
   nav {
