--- a/src/style.css
+++ b/src/style.css
@@ -9,15 +9,16 @@
 body {
   overflow: hidden;
   width: 100%;
-  height: 100vh;
-  background-image: url(../img/bg-mob.png);
+  height: 110vh;
+  background-image: url(../img/bg.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 nav {
-  padding: 25px 80px;
+  width: 100%;
+  height: 90px;
   display: flex;
   background-color: white;
   justify-content: space-between;
@@ -30,23 +31,39 @@ nav .logo a {
   font-size: 25px;
   font-weight: bold;
   font-style: italic;
+  margin-left: 70px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+nav .logo a img {
+  width: 40px;
+  object-fit: cover;
+}
+
+nav .hamburger-menu {
+  display: none;
 }
 
 nav ul {
   display: flex;
   list-style: none;
   gap: 30px;
+  margin-right: 70px;
 }
 
 nav ul li a {
   text-decoration: none;
   font-weight: 500;
+  color: rgb(26, 26, 26);
 }
 
 section .container {
   width: 100%;
   height: 90vh;
   display: flex;
+  justify-content: space-between;
 }
 
 .container .left {
@@ -54,21 +71,86 @@ section .container {
   justify-content: center;
   align-items: center;
   width: 50%;
-  overflow: hidden;
 }
 
 .left img {
-  width: 600px;
+  width: 700px;
 }
 
 .container .right {
-  width: 50%;
+  width: 49%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.right form {
+.right .colm {
+  width: 90%;
+}
+
+.right .colm h1 {
+  font-size: 60px;
+  color: white;
+  font-weight: 600;
+  line-height: 70px;
+}
+
+.right .colm h1 span {
+  color: #00E6B0;
+}
+
+.right .colm .desk {
+  display: flex;
+  color: white;
+  margin-top: 50px;
+}
+
+.right .colm .desk div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.right .colm .desk div:nth-child(1) p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.right .colm .desk div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+}
+
+.right .colm .desk div {
+  gap: 15px;
+  font-size: 17px;
+}
+
+.right .colm  a {
+  margin-top: 50px;
+  background: linear-gradient(to right, #1FD0AA 0%, #00B2C8 52%, #19B2CF 100%);
+  width: 250px;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+  border-radius: 5px;
+  border: 2px solid #1BF9D4;
+  box-shadow: 0px 16px 20px #61008F96;
+  transform: scale(1);
+  transition: 0.2s;
+}
+
+.right .colm a:hover {
+  transform: scale(1.02);
+}
+
+/* .right form {
   border: 1px solid white;
   border-radius: 5px;
   width: 400px;
@@ -109,13 +191,21 @@ form .colm button {
   background-color: white;
   padding: 9px 25px;
   margin-top: 10px;
-}
+} */
 
-.hamburger-menu {
+.right form {
   display: none;
 }
 
 @media screen and (max-width: 576px) {
+  .right form {
+    display: flex;
+  }
+
+  .right .colm {
+    display: none;
+  }
+
   body {
     overflow-y: scroll;
     height: 1000px;
