--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,17 @@
 body {
   overflow: hidden;
   width: 100%;
-  height: 110vh;
-  background-image: url(../img/bg.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  max-height: 1000vh;
+}
+
+#bg-svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -999;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 nav {
@@ -49,7 +55,7 @@ nav .hamburger-menu {
 nav ul {
   display: flex;
   list-style: none;
-  gap: 30px;
+  gap: 50px;
   margin-right: 70px;
 }
 
@@ -150,69 +156,17 @@ section .container {
   transform: scale(1.02);
 }
 
-/* .right form {
-  border: 1px solid white;
-  border-radius: 5px;
-  width: 400px;
-  height: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-form h1 {
-  margin-top: 30px;
-  font-size: 40px;
-  color: white;
-}
-
-form .colm {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-form .colm input {
-  padding: 9px 10px;
-  border-radius: 3px;
-  outline: none;
-  border: transparent;
-  margin-bottom: 20px;
-}
-
-form .colm button {
-  text-decoration: none;
-  border-radius: 5px;
-  outline: none;
-  border: transparent;
-  background-color: white;
-  padding: 9px 25px;
-  margin-top: 10px;
-} */
-
 .right form {
   display: none;
 }
 
 @media screen and (max-width: 576px) {
-  .right form {
-    display: flex;
-  }
-
-  .right .colm {
-    display: none;
-  }
-
   body {
-    overflow-y: scroll;
-    height: 1000px;
+    overflow-y: auto; 
   }
 
   nav {
-    padding: 15px 0;
+    height: 100px;
   }
 
   nav .logo a {
@@ -265,13 +219,35 @@ form .colm button {
     display: none;
   }
 
+  section {
+    overflow-y: auto;
+  }
+
   section .container {
+    display: inline-block;
+    
+  }
+
+  /* section .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    padding: 50px 0;
+    gap: 20px;
+  } */
+
+  .container .left {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .left img {
+    width: 600px;
   }
 
   .container .right {
-    width: 80%;
+    width: 95%;
+    padding-bottom: 50px;
   }
 }
